compiler/testData/diagnostics/tests/generics/multipleBoundsMemberScope/flexibleTypes.fir.kt
// !CHECK_TYPE
// FILE: A.java
public interface A {
    String foo();
}

// FILE: main.kt

interface B {
    fun foo(): String?
}

interface C {
    fun foo(): String
}

fun <T> test(x: T) where T : B, T : A, T : C {
    x.<!AMBIGUITY!>foo<!>().<!INAPPLICABLE_CANDIDATE!>checkType<!> { <!UNRESOLVED_REFERENCE!>_<!><String>() }
}
